# AI-Agent-Governance-Metering-Audit-Self-Learning-Console

./: .gitignore  Contributing.md  LICENSE  Readme.md  governance.db  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py
backend/routes/: agents.py  insight.py  telemetry.py
backend/services/: audit.py
database/: connection.py  seed.py
frontend/: index.html
src/agent_governance_console/backend/: main.py
src/agent_governance_console/backend/api/: agents.py  usage.py  view_audit.py  view_audit_trail.py
src/agent_governance_console/backend/central_audit/: M2M_audit.py  audit_logs.py  insert_logs_into_schema.py
src/agent_governance_console/backend/routes/: agents.py  audit.py  usage.py
src/agent_governance_console/backend/services/: audit.py
src/agent_governance_console/database/: db_connection.py  schema_definition.py  seed.py
src/agent_governance_console/frontend/: index.html
tests/: test_api_endpoints.py  test_m2m_audit.py
