[project]
name = "y"
version = "0.1.0"
description ="A secure, tamper-proof machine-to-machine telemetry logging framework and governance console for AI clusters."
authors = [
    {name = "Shivani Parate", email = "example@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "agent_governance_console", from ="src" }
]