[project]
name = "y"
version = "0.1.0"
description ="A secure, tamper-proof machine-to-machine telemetry logging framework and governance console for AI clusters."
authors = [
    {name = "Shivani Parate", email = "example@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "agent_governance_console", from ="src" }
]
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.16,<0.16.0)"
]

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes bugs
    "I",   # isort import sorting rules
    "N",   # pep8-naming (snake_case enforcement)
    "UP",  # pyupgrade (forces modern syntax syntax)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"